feat: integrate Java repair review, read tools and public contracts